--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,17 @@
 *.out
 *.app
 
+# For CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
+
 # Project involved
 SysLibInclude
 SysLocLibInclude
 thirdparty
+bin
