can be compiled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,5 +64,5 @@ if (BUILD_WITH_GTEST)
   set(TESTING_PROGRAM_NAME testing)
   add_executable(${TESTING_PROGRAM_NAME} ${TESTING_FILE})
   set(PUB_LIBRARIES libgtest.a pthread dl util m)
-  target_link_libraries(${TESTING_PROGRAM_NAME} ${PUB_LIBRARIES})
+  target_link_libraries(${TESTING_PROGRAM_NAME} ${PUB_LIBRARIES} ${PROJECT_NAME})
 endif (BUILD_WITH_GTEST)
